--- a/Carflix/Carflix.csproj
+++ b/Carflix/Carflix.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Refit" Version="6.0.24" />
+    <PackageReference Include="System.Web.Optimization.Less" Version="1.3.5" />
+  </ItemGroup>
+
 </Project>
