--- a/Carflix/Carflix.csproj
+++ b/Carflix/Carflix.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Refit" Version="6.0.24" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.0.24" />
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="toastr" Version="2.1.1" />
   </ItemGroup>
